--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 			<div class="couple-wrap animate-box">
 				<div class="couple-half">
 					<div class="groom">
-						<img src="images/groom.jpg" alt="groom" class="img-responsive">
+						<img src="images/groom.JPG" alt="groom" class="img-responsive">
 					</div>
 					<div class="desc-groom">
 						<h3>Shashank Dasaniya</h3>
@@ -122,7 +122,7 @@
 				<p class="heart text-center"><i class="icon-heart2"></i></p>
 				<div class="couple-half">
 					<div class="bride">
-						<img src="images/bride.jpg" alt="groom" class="img-responsive">
+						<img src="images/bride.JPG" alt="groom" class="img-responsive">
 					</div>
 					<div class="desc-bride">
 						<h3>Bhavika Soni</h3>
