--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 									<span class="date">October 25, 2022</span>
 								</div>
 								<div class="timeline-body">
-									<p>A beautiful day, the next day of Diwali, we both sat on the Sofa, and talked, then talked , and talked. </p>
+									<p>A beautiful day, the next day of Diwali, we both sat on the Sofa, and talked, talked , and talked. </p>
 								</div>
 							</div>
 						</li>
@@ -246,7 +246,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 					<span>Our Memories</span>
 					<h2>Wedding Gallery</h2>
-					<p>A glimpse of Shavika's journey, "A journey of Two Extra Ordniary Idiots" </p>
+					<p>A glimpse of Shavika's journey, "A journey of Two Extra Ordinary Idiots" </p>
 				</div>
 			</div>
 			<div class="row row-bottom-padded-md">
